# Orchids

./: README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: llm.py  main.py  models.py  scraper.py
frontend/: next.config.js  package.json  tsconfig.json
frontend/src/app/: page.tsx  types.ts
frontend/src/app/hooks/: useWebSocket.ts
